@@ -17,6 +17,7 @@
 - Fixed bug in clipboard paste for tk::TextDataSink class.
 - Updated brightness control for LED channels grouped into LED meters.
 - Added border radius support to the tk::Menu widget.
+- Fixed prolbem with scrollbar sync for the tk::ListBox widget.
 
 === 0.5.1 ===
 * Updated code to match lltl library headers.
